--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -6,12 +6,24 @@ jobs:
     steps:
       # prepare enviroment
       - uses: microsoft/setup-msbuild@v1
-      - run: cup anaconda3
+
+      # install cl.exe
       - run: cup visualstudio2022community
+      - run: cup boost-msvc-14.2
+      - run: echo "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+      # conda.exe
+      - run: cup anaconda3
+      - run: echo "C:\tools\Anaconda3\Library\bin\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      - run: echo "C:\tools\Anaconda3\Scripts\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+      # pyqt
       - run: refreshenv && conda install -c conda-forge pyqtwebengine
+
       # check out and make
       - uses: actions/checkout@v2
-      - run: where msbuild
-      - run: where qmake
       - run: refreshenv && qmake
+      #
       # - run: refreshenv && C:\tools\anaconda3\Library\bin\qmake.exe
+      #
+      # see results on https://github.com/snomiao/calibre/actions
