--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -8,17 +8,22 @@ jobs:
       - uses: microsoft/setup-msbuild@v1
 
       # install cl.exe
-      - run: cup visualstudio2022community
+      # - run: cup visualstudio2022community
       - run: cup boost-msvc-14.2
       - run: echo "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       # conda.exe
-      - run: cup anaconda3
-      - run: echo "C:\tools\Anaconda3\Library\bin\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-      - run: echo "C:\tools\Anaconda3\Scripts\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      # - run: cup anaconda3
+      # - run: echo "C:\tools\Anaconda3\Library\bin\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+      # - run: echo "C:\tools\Anaconda3\Scripts\" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
 
       # pyqt
-      - run: refreshenv && conda install -c conda-forge pyqtwebengine
+      # - run: refreshenv && conda install -c conda-forge pyqtwebengine
+      - uses: actions/setup-python@v2
+        with:
+          python-version: "3.x"
+      - run: pip install PyQt5
+      - run: pip install PyQt5-tools
 
       # check out and make
       - uses: actions/checkout@v2
