--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           python-version: "3.x"
       - run: pip install PyQt5
-      - run: pip install PyQt5-tools
+      # - run: pip install PyQt5-tools # got error
 
       # check out and make
       - uses: actions/checkout@v2
